--- a/resources/assets/sass/components/base/nav.scss
+++ b/resources/assets/sass/components/base/nav.scss
@@ -54,9 +54,16 @@ nav {
 			min-width: 250px;
 		}
 	}
+	
+	.skin-0 {
+    		background: #02A1A5;
+    }
+
+    .skin-1 {
+    		background: #02A1A5;
+    }
 
 	.category-selection {
-		background: #02A1A5;
 		color: #fff;
 		position: absolute;
     	top: 0;
