- added search on slug in Course Controller - altered categories to have slugs - altered web detail routes

--- a/resources/assets/sass/components/base/nav.scss
+++ b/resources/assets/sass/components/base/nav.scss
@@ -68,6 +68,10 @@ nav {
 		position: absolute;
     	top: 0;
     	left: 250px;
+
+    	a {
+    		color: inherit;
+    	}
 	}
 	
 	.categories > ul > li ul {
