- added utility css - alter category table to accept slug - added sub-nav separation - added detail view

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,4 +10,7 @@
 
 @import 'components/course';
 
-@import 'components/base/nav.scss';
+@import 'components/base/nav';
+
+@import 'utils/color-modifiers';
+@import 'utils/spacing';
