--- a/resources/assets/sass/components/course.scss
+++ b/resources/assets/sass/components/course.scss
@@ -23,3 +23,15 @@
 		font-size: 18px;
 	}
 }
+
+.rating {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  text-align: left;
+  font-size: 22px;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+}
