- Added query to select completed placed on course model - added some markup to show page

--- a/resources/assets/sass/components/course.scss
+++ b/resources/assets/sass/components/course.scss
@@ -35,3 +35,12 @@
    content: "\2605";
    position: absolute;
 }
+
+.progress {
+    width: 100%;
+    background-color: grey;
+}
+.bar {
+    height: 30px;
+    background-color: green;
+}
