Added link for course list to course detail Added course list scss Added course detail web route

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,7 @@
 @import 'components/course';
 
 @import 'components/base/nav';
+@import 'components/base/course-bar';
 
 @import 'utils/color-modifiers';
 @import 'utils/spacing';
