added some styles and added side bar

--- a/resources/assets/sass/utils/color-modifiers.scss
+++ b/resources/assets/sass/utils/color-modifiers.scss
@@ -6,6 +6,14 @@
 	background: #333;
 }
 
+.bg-white {
+	background: #fff;
+}
+
 .text-white {
 	color: #fff;
+}
+
+.text-green {
+	color: #17aa1c;
 }
