--- a/resources/assets/sass/components/base/course-bar.scss
+++ b/resources/assets/sass/components/base/course-bar.scss
@@ -1,4 +1,85 @@
 .course-bar-meta {
 	width: 60%;
 	float: left;
+
+  span {
+    padding-left: 20px;
+  }
+
+  span:first-child {
+    padding-left: 0;
+  }
 }
+
+// Method 1) Pure CSS
+.star-ratings-css {
+  unicode-bidi: bidi-override;
+  color: #c5c5c5;
+  display: inline-block;
+  font-size: 20px;
+  height: 25px;
+  width: 100px;
+  margin: 0 auto;
+  position: relative;
+  padding: 0;
+  text-shadow: 0px 1px 0 #a2a2a2;
+  padding-left: 20px;
+
+  span {
+    padding-left: 0;
+  }
+  
+  &-top {
+    color: #17aa1c;
+    padding: 0;
+    position: absolute;
+    z-index: 1;
+    display: block;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+  }
+  &-bottom {
+    padding: 0;
+    display: block;
+    z-index: 0;
+  }
+}
+
+  .course-floater {
+    padding: 5px;
+    position: absolute;
+    right: 0;
+    width: 34%;
+
+    .course-floater-wrapper {
+      border: 1px solid #ddd;
+      padding: 5px;
+      border-radius: 5px;
+    }
+
+    .course-floater-bottom {
+      padding: 20px;
+    }
+
+    button {
+      background: #17aa1c;
+      width: 100%;
+      display: block;
+      margin-bottom: 8px;
+      padding: 15px;
+    }
+
+    .add-to-cart {
+      background: #fff;
+      border: 1px solid #ddd;
+    }
+
+    li {
+      list-style: none;
+    }
+  }
+
+  .inline-block {
+    display: inline-block;
+  }
