- added search controller methods - added avg review attribute to model - added temp background color - added results.scss

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,6 +10,7 @@
 
 @import 'components/course';
 @import 'components/course-lectures';
+@import 'components/results';
 
 @import 'components/base/nav';
 @import 'components/base/button';
