--- a/resources/assets/sass/components/base/nav.scss
+++ b/resources/assets/sass/components/base/nav.scss
@@ -44,7 +44,7 @@ nav {
 		display: block;
 		
 	}
-
+	
 	.categories {
 		font-weight: lighter;
 		position: absolute;
@@ -143,4 +143,18 @@ nav {
 			}
 	}
 }
+
+	.instructor-dropdown {
+		display: none;
+		position: relative;
+		background: #fff;
+		height: 48px;
+		padding: 15px 22px 15px 22px;
+		margin-left: -22px;
+	}
+
+	.instructor:hover .instructor-dropdown {
+		display: block;
+		position: absolute;
+	}
 
